# thin-edge.io

./: Cargo.toml  GOVERNANCE.md
.github/workflows/: pull-request-checks.yml
configuration/init/systemd/: tedge-mapper-az.service  tedge-mapper-c8y.service
crates/common/certificate/: Cargo.toml
crates/common/certificate/src/: parse_root_certificate.rs
crates/common/download/: Cargo.toml
crates/common/download/src/: download.rs
crates/common/flockfile/: Cargo.toml
crates/common/operation_journal/: Cargo.toml
crates/common/operation_journal/src/: errors.rs  events.rs  journal.rs  lib.rs
crates/common/tedge_utils/: Cargo.toml
crates/common/tedge_utils/src/: file.rs  notify.rs
crates/core/c8y_api/src/: http_proxy.rs
crates/core/tedge_actors/src/: actors.rs  (+9 more)
crates/core/tedge_mapper/: Cargo.toml
crates/tests/mqtt-cat/: Cargo.toml
crates/tests/mqtt-cat/src/: actions.rs  cli.rs  config.rs  events.rs  machines.rs  main.rs  messages.rs  session.rs  templates.rs  timer.rs
crates/tests/mqtt-tunnel/: Cargo.toml
crates/tests/mqtt-tunnel/src/: main.rs
docs/src/: SUMMARY.md
docs/src/howto-guides/: howto-guides.md
docs/src/references/: bridged-topics.md  c8y-configuration-management.md  c8y-firmware-management.md  c8y-log-management.md  index.md  init-system-config.md  plugin-api.md  tedge-file-transfer-service.md  thin-edge-config-files.md
docs/src/start/: connect-aws.md  connect-azure.md  connect-c8y.md  device-monitoring.md  getting-started.md  raise-alarm.md
docs/src/understand/: index.md  mapper.md  thin-edge-json.md  typical-iiot-agent.md
(+59 files in other folders)
